<resources>
    <string name="app_name">Onyx</string>
    <string name="connect_to_bike">Connect to</string>
    <string name="need_bt">You need to enable bluetooth.</string>
    <string name="need_gps">You need to enable location services to scan for bluetooth devices.</string>
    <string name="nope">nope</string>
    <string name="connected">CONNECTED</string>
    <string name="a_full_read_of_the_controller_is_needed_if_you_want_to_program_it">A full read of the controller is needed if you want to program it.</string>
    <string name="read_from_controller">READ FROM CONTROLLER</string>
    <string name="feet_abbr">%1$d FT</string>
    <string name="connect_bike">CONNECT</string>
    <string name="cancel_bike">DISMISS</string>
    <string name="nickname">Add Nickname</string>
    <string name="save">SAVE</string>
    <string name="dismiss">dismiss</string>
    <string name="connected_to_">CONNECTED TO\n%1$s</string>
  <string name="this_is_awkward_this_app_has_self_destructed_for_your_safety_please_dig_deep_into_the_cave_you_were_in_and_find_an_updated_version_no_app_for_you">This is awkward. This app has self destructed for your safety. Please dig deep into the cave you were in and find an updated version. No app for you!</string>
  <string name="okay_dad">Okay Dad</string>
  <string name="connect_to_this_bike">Connect to this bike?</string>
  <string name="cd_clipart_of_small_onyx_bike">Clipart of small onyx bike</string>
  <string name="cd_onyx_logo">Onyx logo</string>
  <string name="controller_setting_113">Speed Mode - One</string>
  <string name="controller_setting_111">Speed Mode - Two</string>
  <string name="controller_setting_109">Speed Mode - Three</string>
  <string name="controller_setting_37">Current Percent</string>
  <string name="controller_setting_38">Battery Current Limit</string>
  <string name="controller_setting_230">RLS TPS Brake Percent</string>
  <string name="controller_setting_231">NTL Brake Percent</string>
  <string name="controller_setting_239">Accel Time</string>
  <string name="controller_setting_250">Torque Speed KPS</string>
  <string name="controller_setting_252">Torque Speed KI</string>
  <string name="controller_setting_254">Speed ERR Limit</string>
  <string name="review">REVIEW</string>
  <string name="write_to_controller">SLIDE TO WRITE</string>
  <string name="setting">Changed Settings</string>
  <string name="previous">Previous</string>
  <string name="new_value">New Value</string>
  <string name="below_is_a_list_of_bikes_near_you">Bikes near you:</string>
  <string name="locating_bikes_make_sure_the_bike_is_on">Locating bikes. Make sure the bike is on!</string>
  <string name="have_no_clue_what_to_change_try_a_preset_to_get_the_ball_rolling">Have no clue what to change? Try a |preset| to get the hub motor spinning.</string>
  <string name="preset_or_previous_configuration">Load a |preset| or |previous configuration|.</string>
  <string name="preset">preset</string>
  <string name="preset_sicko">John Angel - Sicko Mode | 100%</string>
  <string name="preset_torque">John Angel - Torque Mode | 75%</string>
  <string name="preset_champ">John Angel - Champ Mode | 85%</string>
  <string name="preset_onyx">Onyx - Stock | 50%</string>
  <string name="available_presets">Presets available are listed below.  If using performance settings, make sure you have made the proper modifications to your bike.</string>
  <string name="disconnect">Disconnect</string>
  <string name="googleServicesFile">google-services.json</string>
  <string name="cd_motor_stay">Buy some motor stays</string>
  <string name="however_some_people_want_to_part_with_money_to_show_support_so_if_you_send_25_to_ryan_gravener_on_venmo_with_a_comment_of_your_address_i_ll_mail_you_some_motor_stays">However, some people want to part with money to show support. So if you send $25 to |@Ryan-Gravener| on venmo, and a comment of your address I\'ll mail you some motor stays.</string>
  <string name="this_app_is_free_because_everything_that_is_great_in_life_is">This app is free. Because everything that is great in life is.</string>
  <string name="turn_the_bike_off_for_5_seconds_and_turn_it_back_on_you_are_now_all_done">Turn the bike off for 5+ seconds and turn it back on. You are now all done.</string>
  <string name="previous_configuration">previous configuration</string>
</resources>