<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"

  xmlns:app="http://schemas.android.com/apk/res-auto">


  <TextView
    android:id="@+id/name"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    android:minHeight="50dp"
    android:text="@string/setting"
    android:textStyle="bold"
    android:layout_marginStart="20dp"
    android:gravity="center_vertical|left"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintWidth_percent=".55"/>

  <TextView
    android:id="@+id/old"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:minHeight="50dp"
    android:textStyle="bold"
    android:text="@string/previous"
    app:layout_constraintStart_toEndOf="@id/name"
    android:gravity="center"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintWidth_percent=".22"/>

  <TextView
    android:id="@+id/newV"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:textStyle="bold"
    android:minHeight="50dp"
    android:text="@string/new_value"
    app:layout_constraintEnd_toEndOf="parent"
    android:gravity="center"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintWidth_percent=".23"/>

</androidx.constraintlayout.widget.ConstraintLayout>