<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">


  <TextView
    android:id="@+id/connecting"
    android:layout_width="wrap_content"
    android:visibility="gone"
    android:layout_height="wrap_content"
    android:text="@string/locating_bikes_make_sure_the_bike_is_on"
    app:layout_constraintBottom_toTopOf="@id/scanning"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />


  <Button
    android:id="@+id/connect"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Connect to bike"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <com.airbnb.lottie.LottieAnimationView
    android:id="@+id/scanning"
    app:lottie_rawRes="@raw/lottie_scan"
    android:visibility="gone"
    app:lottie_autoPlay="true"
    app:lottie_loop="true"
    android:layout_width="0dp"
    app:layout_constraintWidth_percent=".9"
    app:layout_constraintDimensionRatio="H,1:1"
    app:lottie_repeatMode="reverse"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_height="0dp"/>

  <TextView
    android:id="@+id/countdown"
    android:layout_width="wrap_content"
    app:layout_constraintStart_toStartOf="@id/scanning"
    app:layout_constraintEnd_toEndOf="@id/scanning"
    android:textSize="28sp"
    app:layout_constraintTop_toTopOf="@id/scanning"
    android:textColor="@color/purple_700"
    app:layout_constraintBottom_toBottomOf="@id/scanning"
    android:layout_height="wrap_content"/>

  <TextView
    android:id="@+id/bt"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="20dp"
    android:text="@string/need_bt"
    app:layout_constraintBottom_toTopOf="@id/enableBt"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_chainStyle="packed" />

  <Button
    android:id="@+id/enableBt"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Enable Bluetooth"
    app:layout_constraintBottom_toTopOf="@id/location"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/bt" />

  <TextView
    android:id="@+id/location"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="20dp"
    android:text="@string/need_gps"
    app:layout_constraintBottom_toTopOf="@id/enableLocation"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/enableBt" />

  <Button
    android:id="@+id/enableLocation"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Enable Bluetooth"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/location" />

</androidx.constraintlayout.widget.ConstraintLayout>