<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="#1b1c38"
  android:fitsSystemWindows="true"
  tools:context=".MainActivity">

  <TextView
    android:foreground="?selectableItemBackgroundBorderless"
    android:id="@+id/connected"
    android:padding="5dp"
    android:background="@drawable/clear_round_button"
    android:layout_width="wrap_content"
    android:text="@string/connected"
    app:layout_constraintTop_toTopOf="parent"
    android:gravity="center"
    android:visibility="gone"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:textColor="@color/online_green"
    android:layout_height="48dp"/>

  <ImageView
    android:id="@+id/logo_small"
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_marginStart="10dp"
    android:layout_marginTop="5dp"
    app:tint="@color/white"
    android:src="@drawable/ic_onyxbike"
    android:foreground="?selectableItemBackgroundBorderless"
    android:visibility="gone"
    android:contentDescription="@string/cd_onyx_logo"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <ImageView
    android:id="@+id/motor_stay"
    android:layout_width="40dp"
    android:padding="5dp"
    android:layout_height="40dp"
    android:layout_marginEnd="10dp"
    android:src="@drawable/ic_motor_stay_01"
    android:contentDescription="@string/cd_motor_stay"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@id/hr"
    app:layout_constraintTop_toTopOf="parent" />

  <View
    android:id="@+id/hr"
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:layout_marginTop="50dp"
    android:background="#cbccde"
    app:layout_constraintTop_toTopOf="parent" />

  <View
    android:id="@+id/fillerBg"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:background="#13152b"
    android:paddingBottom="4dp"
    app:layout_constraintBottom_toTopOf="@id/viewPager"
    app:layout_constraintTop_toBottomOf="@id/hr" />

  <View
    android:layout_width="match_parent"
    android:layout_height="4dp"
    android:background="#1b1c38"
    android:paddingBottom="4dp"
    android:visibility="visible"
    android:id="@+id/space"
    app:layout_constraintBottom_toBottomOf="@id/strip" />

  <ImageView
    android:id="@+id/logo"
    android:layout_width="69dp"
    android:layout_height="69dp"
    android:layout_marginTop="60dp"
    app:tint="@color/white"
    android:src="@drawable/ic_onyxbike"
    android:contentDescription="@string/cd_onyx_logo"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/hr" />

  <View
    android:layout_width="wrap_content"
    android:id="@+id/spacer"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/logo"
    android:layout_height="40dp"/>

  <com.google.android.material.tabs.TabLayout
    android:id="@+id/strip"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/logo"
    app:layout_constraintWidth_percent=".7"
    app:tabBackground="@drawable/tab_background"
    app:tabIconTint="@color/tab_icon_tint"
    app:tabIndicator="@drawable/tab_indicator"
    app:tabIndicatorColor="@null" />

  <androidx.viewpager2.widget.ViewPager2
    android:id="@+id/viewPager"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toBottomOf="@id/strip" />

  <androidx.constraintlayout.widget.Group
    android:id="@+id/strips"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:constraint_referenced_ids="viewPager,strip" />

  <FrameLayout
    android:layout_width="match_parent"
    android:id="@+id/connectView"
    android:layout_height="0dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toBottomOf="@id/strip">

    <androidx.fragment.app.FragmentContainerView
      android:id="@+id/connectFragment"
      android:name="us.wmwm.onyx.connect.ConnectFragment"
      android:layout_width="match_parent"
      android:layout_height="match_parent" />
  </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>